# hexagon

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  gen
include/: GameStateManager.hpp  Obstacles.hpp  camera.hpp  player.hpp  shader.hpp  texture.hpp  vertex.hpp  walls.hpp
include/glad/: glad.h
src/: game.cpp  glad.c  hexagon.cpp  main.cpp  models.c  walls.cpp
src/shaders/: background_fs.glsl  background_vs.glsl  fragment_shader.glsl  player_fs.glsl  player_vs.glsl  vertex_shader.glsl  walls_fs.glsl  walls_vs.glsl
